btsk-86: 필요없는 설정 제거